# YUE-FINETUNE

./: CODECS.md  INSTALL.md  README.md  check_project_structure.py  final_test.py  pyproject.toml  requirements.txt  run_yue.py  test_codec_fix.py  test_codec_import.py  test_imports.py  test_pipeline.py  test_semanticodec_default.py
finetune/: README.md  gradio_finetune.py  new_yue_trainer.py  requirements.txt
finetune/config/: ds_config_zero2.json
finetune/core/: arguments.py
finetune/pipeline/: new_config.py  new_steps.py
finetune/scripts/: run_finetune.sh  train_lora.py
finetune/tools/: codecmanipulator.py  new_count_mmap_token.py
inference/: infer.py
tests/: test_smoke.py
yue_finetune.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
